  for compatibility with erd. (RFB)
- tools/erd.c: Fixed ctype warnings on Cygwin. (VRI)
- .cvsignore Makefile: Build the erd tool using "make erd". (VRI)
- desk/deskbind.h desk/deskmain.c: Code cleanup: removed unused FCB
  structures from GLOBES. (RFB)

2012-02-11
- desk/*: Removed all unnecessary #includes from all files within the desk
  directory. (RFB)
- desk/deskapp.c desk/deskfpd.c desk/deskmain.c desk/desksupp.c
  desk/deskwin.c: Restored some #includes required for 'make 192'. (RFB)
- desk/deskact.c desk/deskbind.h desk/deskconf.h: Code cleanup: centralised
  #define for MAX_OBS. (RFB)
- desk/deskbind.h desk/deskconf.h: Code cleanup: centralised #define for
  MAX_LEVEL. (RFB)
- desk/infodef.h: Code cleanup: removed unused #defines. (RFB)

2012-02-12
- doc/status.txt: Updated to reflect implementation of TT & Falcon xbios
  video calls. (RFB)
- desk/deskact.c desk/deskconf.h desk/deskwin.c: Code cleanup: centralised
  #define for LEN_FNODE. (RFB)

2012-02-14
- Makefile: Do not build makefile.dep when building the tools. (VRI)
- Makefile: Replaced the obsolete -W option by the new -Wextra. (VRI)
- Makefile: Removed desk/desk_rsc.[ch] and enabled the ERD tool. (VRI)
- tools/erd.c: Made *_rs_trees and *_rs_fstr const to move them to the TEXT
  segment. (VRI)

2012-02-16
- bios/screen.c bios/screen.h: Created new function to be called by
  screen resolution change processing. (RFB)
- Makefile aes/geminit.c desk/deskmain.c desk/deskrez.c desk/deskrez.h
  desk/desktop.dfn desk/desktop.rsc: Allow desktop resolution switching
  for TT. (RFB)

2012-02-19
- bios/machine.c: In the _SND cookie, remove SND_16BIT and SND_MATRIX until
  the Falcon XBIOS sound functions are implemented. (VRI)

2012-02-20
- bios/screen.c bios/screen.h: Improve calculation of Falcon VRAM size in
  preparation for Falcon resolution switching. (RFB)

2012-02-21
- po/fr.po: Fixed leading capital letter in menus sort items. (VRI)